# Grammar-LLM-Bridge

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  grammar-checker.html  pyproject.toml  requirements.txt  run_model_quality.sh
.github/workflows/: ci.yml
app/: __init__.py  config.py  error_finder.py  handlers.py  main.py  position_mapper.py  prompts.py  response_builder.py  text_processing.py
app/api/: __init__.py  auth.py  v2.py
app/auth/: __init__.py  dependencies.py  middleware.py  rate_limiter.py  utils.py
app/db/: __init__.py  api_keys.py  connection.py  users.py
app/llm/: __init__.py  client.py  deepseek.py  fallback.py  openai.py  providers.py
app/models/: __init__.py  auth.py  grammar_api.py
app/prompts/: __init__.py  common.py  en.py  ru.py
deploy/load-balancer/: CAPACITY.en-GB.md  CAPACITY.ru-RU.md  LOAD_BALANCER_SETUP.md  NETWORK_NOTES.md  compose-deploy.sh  deploy-stack.sh  docker-compose.yml  lb.conf
docs/: LEVEL_MODES.md  README.md  filters_and_behavior.md  level_modes_matrix.md  level_modes_plan.md  linguistic_test_plan.md  model_env_profiles.md  prompt_rules.md  style_prompt_blocks.md  sva_prompt_update.md
docs/architecture/: MODULE_STRUCTURE.md  REFACTORING.md
docs/auth/: AUTH_CUSTOMIZATION.md  AUTH_GUIDE.md
docs/qa/: Known-Noisy-Cases.md  LLM-Filters-and-Prompting.md  LLM-Output-Guide.md  testing_notes.md
docs/research/: API_REQUEST_RESPONSE_EXAMPLES.md  AUTH_DESIGN_DISCUSSION.md  GRAMMAR_CHECK_STYLES.md  LANGUAGETOOL_ADDITIONAL_APIS.md  LANGUAGETOOL_FILTERING_PARAMS.md  LANGUAGETOOL_GOALS_TONETAGS.md  LLM_SYNONYMS_APPROACH.md  MULTI_LLM_DESIGN.md  OPENROUTER_FREE_MODELS.md  PARAPHRASE_SYNONYMS_API_SCHEMA.md  (+18 more)
qa-results/: README.md
(+179 files in other folders)
